--- a/404.html
+++ b/404.html
@@ -1,80 +1,134 @@
-<!DOCTYPE html><html lang="en"><head>
-		<title>NoT F0uND | Sahithyan</title>
-		<meta name="description" content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka.">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>NoT F0uND | Sahithyan</title>
+    <meta
+      name="description"
+      content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka."
+    />
 
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-		<link rel="alternate" href="https://sahithyandev.github.io/feed.xml" type="application/rss+xml" title="RSS feed">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link
+      rel="alternate"
+      href="https://sahithyandev.github.io/feed.xml"
+      type="application/rss+xml"
+      title="RSS feed"
+    />
 
-		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:site" content="@sahithyandev">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@sahithyandev" />
 
-		<meta property="og:type" content="website">
-		<meta property="og:description" content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka.">
-		<meta property="og:title" content="NoT F0uND | Sahithyan">
-		<meta property="og:url" content="sahithyandev.github.io">
-		<meta property="og:site_name" content="Sahithyan">
-		<meta property="og:image" content="https://sahithyandev.github.io/og-image-base.png">
-		<meta property="og:image:alt" content="Sahithyan">
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka."
+    />
+    <meta property="og:title" content="NoT F0uND | Sahithyan" />
+    <meta property="og:url" content="sahithyandev.github.io" />
+    <meta property="og:site_name" content="Sahithyan" />
+    <meta
+      property="og:image"
+      content="https://sahithyandev.github.io/og-image-base.png"
+    />
+    <meta property="og:image:alt" content="Sahithyan" />
 
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
 
-		<link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap" as="style" onload="this.onload=null; this.rel='stylesheet'" id="google-fonts-link">
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap"
+      as="style"
+      onload="this.onload=null; this.rel='stylesheet'"
+      id="google-fonts-link"
+    />
 
-		<noscript>
-			<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" type="text/css" />
-		</noscript>
+    <noscript>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+        rel="stylesheet"
+        type="text/css"
+      />
+    </noscript>
 
-		<script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async="" defer=""></script>
+    <script
+      data-host="https://microanalytics.io"
+      data-dnt="false"
+      src="https://microanalytics.io/js/script.js"
+      id="ZwSg9rf6GA"
+      async=""
+      defer=""
+    ></script>
 
-		<link rel="stylesheet" href="/global.css">
+    <link rel="stylesheet" href="/global.css" />
 
-		<script>
-			if ("serviceWorker" in navigator) {
-				navigator.serviceWorker
-					.register("/service-worker.js")
-					.catch((error) => {
-						console.error("Error while initializing service worker", error);
-					});
-			}
-		</script>
+    <script>
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker
+          .register("/service-worker.js")
+          .catch((error) => {
+            console.error("Error while initializing service worker", error);
+          });
+      }
+    </script>
 
-		<script>
-			let pageData;
-			try {
-				pageData = JSON.parse(`%PAGE_DATA%`);
-			} catch (e) {
-				console.warn("pageData error", e);
-			}
-		</script>
-	<style>html,
-body {
-  height: 100vh;
-}
+    <script>
+      let pageData;
+      try {
+        pageData = JSON.parse(`%PAGE_DATA%`);
+      } catch (e) {
+        console.warn("pageData error", e);
+      }
+    </script>
+    <style>
+      html,
+      body {
+        height: 100vh;
+      }
 
-#root {
-  height: inherit;
-  display: flex;
-  flex-direction: column;
-}
+      #root {
+        height: inherit;
+        display: flex;
+        flex-direction: column;
+      }
 
-#main {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}</style></head>
+      #main {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
+  </head>
 
-	<body>
-		<div id="root"><nav class="desktop"><a href="/" class="nav--logo " data-is-internal="">sahithyan</a><ul><li><a href="/projects" class="nav--link " data-is-internal="">Projects</a></li><li><a href="/posts" class="nav--link " data-is-internal="">Posts</a></li><li><a href="/about" class="nav--link " data-is-internal="">About</a></li></ul></nav><div id="main"><h1>$&gt;&gt; paGe n0t found</h1></div><footer>© Sahithyan 2021</footer></div>
-		<script src="/lib-preact.js"></script>
-		<script id="main-script" defer="" src="/404.js"></script>
-	
-
-</body></html>
+  <body>
+    <div id="root">
+      <nav class="desktop">
+        <a href="/" class="nav--logo" data-is-internal="">sahithyan</a>
+        <ul>
+          <li>
+            <a href="/projects" class="nav--link" data-is-internal=""
+              >Projects</a
+            >
+          </li>
+          <li>
+            <a href="/posts" class="nav--link" data-is-internal="">Posts</a>
+          </li>
+          <li>
+            <a href="/about" class="nav--link" data-is-internal="">About</a>
+          </li>
+        </ul>
+      </nav>
+      <div id="main"><h1>$&gt;&gt; paGe n0t found</h1></div>
+      <footer>© Sahithyan 2021</footer>
+    </div>
+    <script src="/lib-preact.js"></script>
+    <script id="main-script" defer="" src="/404.js"></script>
+  </body>
+</html>
