Update from https://github.com/sahithyandev/static-blog/commit/ba01462f0d8664c8f0af8367c5cc7b381a035511

--- a/about.html
+++ b/about.html
@@ -140,14 +140,9 @@
         <h2>About this site</h2>
         <p>
           This website is made using Preact (TypeScript), Sass, MDX and Rollup.
-          You can checkout the source code at
-          <a
-            href="https://github.com/sahithyandev/static-blog"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="styled-link"
-            >sahithyandev/static-blog</a
-          >. And hosted using GitHub Pages.
+          And hosted using GitHub Pages. For security reasons, I have made the
+          source code of this website private. I will be publishing a write-up
+          about how I made this site and why I made it private, soon.
         </p>
         <h2>Contact me</h2>
         <p>
