--- a/index.html
+++ b/index.html
@@ -173,18 +173,22 @@
 
   <body>
     <div id="root">
-      <nav class="desktop">
+      <nav>
         <div></div>
+        <input type="checkbox" id="menu-toggle" /><label
+          for="menu-toggle"
+          class="hamburger-icon"
+        ></label>
         <ul>
-          <li>
+          <li data-animation-delay-id="0">
             <a href="/projects" class="nav--link" data-is-internal=""
               >Projects</a
             >
           </li>
-          <li>
+          <li data-animation-delay-id="1">
             <a href="/posts" class="nav--link" data-is-internal="">Posts</a>
           </li>
-          <li>
+          <li data-animation-delay-id="2">
             <a href="/about" class="nav--link" data-is-internal="">About</a>
           </li>
         </ul>
@@ -354,7 +358,5 @@
       </main>
       <footer>© Sahithyan 2021</footer>
     </div>
-    <script src="/lib-preact.js"></script>
-    <script id="main-script" defer="" src="/index.js"></script>
   </body>
 </html>
