Update from https://github.com/sahithyandev/static-blog/commit/09ade2fef9508b7b59f4ad45297e3df5efd24b4e

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
     <script>
       let pageData;
       try {
-        pageData = JSON.parse(`%PAGE_DATA%`);
+        pageData = JSON.parse(`{}`);
       } catch (e) {
         console.warn("pageData error", e);
       }
