--- a/index.html
+++ b/index.html
@@ -142,19 +142,51 @@
       }
 
       .me-banner {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        display: grid;
+        grid-template-columns: 80% 20%;
+        grid-template-rows: auto auto auto;
+        grid-template-areas: "name img" "description img" "social-links img";
+        column-gap: 10px;
         margin-top: 3rem;
         margin-bottom: 4rem;
         padding: 20px 0 30px;
       }
       .me-banner h1 {
-        margin-bottom: 0.5rem;
+        grid-area: name;
+        margin-top: 0.1rem;
+        margin-bottom: 6px;
+        font-size: 3rem;
       }
-      .me-banner p {
+      .me-banner h3 {
+        grid-area: description;
         margin: 0;
-        text-align: center;
+        margin-bottom: 25px;
+        font-weight: normal;
+        font-size: 1rem;
+        line-height: 1.5rem;
+      }
+      .me-banner .social-links {
+        grid-area: social-links;
+        margin: 0;
+      }
+      .me-banner img {
+        grid-area: img;
+        width: 100%;
+        height: auto;
+      }
+      @media (max-width: 640px) {
+        .me-banner {
+          grid-template-columns: 100%;
+          grid-template-rows: auto auto auto auto;
+          grid-template-areas: "img" "name" "description" "social-links";
+        }
+        .me-banner h1 {
+          font-size: 2.5rem;
+        }
+        .me-banner img {
+          max-width: 100px;
+          margin-bottom: 20px;
+        }
       }
 
       .sub-heading {
@@ -196,7 +228,8 @@
       <main>
         <div class="stretch-out me-banner">
           <h1>Sahithyan</h1>
-          <p>student, web developer &amp; tech enthusiast</p>
+          <h3>student, web developer &amp; tech enthusiast</h3>
+          <img src="/me.png" alt="me" />
           <div class="social-links">
             <a
               title="Twitter (sahithyandev)"
