Update from https://github.com/sahithyandev/static-blog/commit/f3339893b24fc1ccae30e060ba64edbaea84da9a

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
         }
       }
       .top-banner {
+        font-size: 0.95rem;
         text-align: center;
         margin: 0 calc(-1 * var(--body-margin-x));
         padding: 5px 0;
@@ -242,7 +243,15 @@
 
   <body>
     <div id="root">
-      <div class="top-banner">I support Ukraine 🇺🇦</div>
+      <div class="top-banner">
+        I support Ukraine
+        <img
+          alt="🇺🇦"
+          src="https://abs-0.twimg.com/emoji/v2/svg/1f1fa-1f1e6.svg"
+          draggable="true"
+          style="height: 1rem"
+        />
+      </div>
       <nav>
         <div></div>
         <input type="checkbox" id="menu-toggle" /><label
